--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,23 +5,12 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+      - uses: actions/checkout@v4
 
       - name: Install dependencies
         run: npm install
         working-directory: demo-project
-
-      - name: Run tests
-        run: npm test
