--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,5 +26,5 @@ jobs:
         run: npm install
 
       # Step 4: Run test script (can be customized)
-      - name: Run tests
+      - name: Venky Sparrow
         run: npm test
